--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,11 @@ display: block;
 .page-nav-item:last-child{
    margin-right: 0;
 }
+.page-nav-item:hover,
+.page-nav-item:focus{
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+}
 
 .key{
  padding: 6px 22px;
@@ -329,6 +334,10 @@ color: var(--primary-text-color);
 }
 .card-box div{
    padding: 20px 24px;
+  
+}
+.card-box:hover{
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* BODY */
@@ -580,8 +589,8 @@ letter-spacing: 0.03em;
    display: flex;
    justify-content: center;
    align-items: center;
-   width: 170px;
-   height: 92px;
+    width: 170px;
+   height: 92px; 
    border: 1px solid #AFB1B8;
    border-radius: 4px;
    padding: 16px 32px;
