--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ color: #FFFFFF;
 background-color:#2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+border:transparent;
 }
 /* BENEFITS */
 .benefits{
